// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedAreasPanel When there are areas selected snapshot test 1`] = `
<DocumentFragment>
  .c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  display: block;
  clear: none;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.c5 {
  cursor: pointer;
}

.c3 {
  background-color: white;
  border: 1px #D1D2D3 solid;
  border-radius: 5px;
  padding: 0.5em 0.3125em 0.5em 0em;
  max-width: 100%;
  margin: 0.3125em 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  word-wrap: break-word;
  padding: 0em 1em 0em 0.75em;
  font-size: 16px;
  margin-bottom: 0;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
}

.c4:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c7 {
  font-weight: 500;
}

.c8 {
  color: #505A5F;
}

.c0 {
  padding-bottom: 1.5em;
}

.c2 {
  font-weight: bold;
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 0;
  }
}

@media print {
  .c6 {
    font-family: sans-serif;
  }
}

<div
    class="c0"
    data-testid="selected-areas-panel"
  >
    <div
      data-testid="standard-selected-areas-panel"
    >
      <span
        class="c1 c2"
      >
        Selected areas (2)
      </span>
      <div
        class="c3"
        data-testid="pill-container"
      >
        <button
          class="c4"
          data-testid="remove-icon-div"
        >
          <svg
            class="c5"
            data-testid="x-icon"
            fill="none"
            height="12"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 25 25"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
        <div
          class="c6"
          data-testid="filter-name"
        >
          <p
            style="margin: 0px;"
          >
            <span
              class="c7"
            >
              East of England NHS Region
            </span>
             
            <span
              class="c8"
            >
              NHS Regions
            </span>
          </p>
        </div>
      </div>
      <div
        class="c3"
        data-testid="pill-container"
      >
        <button
          class="c4"
          data-testid="remove-icon-div"
        >
          <svg
            class="c5"
            data-testid="x-icon"
            fill="none"
            height="12"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 25 25"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
        <div
          class="c6"
          data-testid="filter-name"
        >
          <p
            style="margin: 0px;"
          >
            <span
              class="c7"
            >
              North East and Yorkshire NHS Region
            </span>
             
            <span
              class="c8"
            >
              NHS Regions
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectedAreasPanel When there is a group area selected snapshot test 1`] = `
<DocumentFragment>
  .c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  display: block;
  clear: none;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.c5 {
  cursor: pointer;
}

.c3 {
  background-color: white;
  border: 1px #D1D2D3 solid;
  border-radius: 5px;
  padding: 0.5em 0.3125em 0.5em 0em;
  max-width: 100%;
  margin: 0.3125em 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  word-wrap: break-word;
  padding: 0em 1em 0em 0.75em;
  font-size: 16px;
  margin-bottom: 0;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
}

.c4:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c7 {
  color: #505A5F;
}

.c0 {
  padding-bottom: 1.5em;
}

.c2 {
  font-weight: bold;
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 0;
  }
}

@media print {
  .c6 {
    font-family: sans-serif;
  }
}

<div
    class="c0"
    data-testid="selected-areas-panel"
  >
    <div
      data-testid="group-selected-areas-panel"
    >
      <span
        class="c1 c2"
      >
        Selected areas (2)
      </span>
      <div
        class="c3"
        data-testid="pill-container"
      >
        <button
          class="c4"
          data-testid="remove-icon-div"
        >
          <svg
            class="c5"
            data-testid="x-icon"
            fill="none"
            height="12"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 25 25"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
        <div
          class="c6"
          data-testid="filter-name"
        >
          <p
            style="margin: 0px;"
          >
            All areas in  
            <span
              class="c7"
            >
              NHS Primary Care Networks
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
